cluster/k8s/cpap-sync/namespace.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    goldilocks.fairwinds.com/enabled: "false"
    name: cpap-sync
    pod-security.kubernetes.io/enforce: baseline
  name: cpap-sync
spec: {}
